# SoftHSMv2

./: .gitignore  configure.ac
src/lib/object_store/: DBObject.cpp  DBObject.h  DBToken.cpp  DBToken.h  FileToken.cpp  FileToken.h  Makefile.am  OSObject.h  OSToken.cpp  OSToken.h  ObjectFile.cpp  ObjectFile.h  ObjectStore.cpp  SessionObject.cpp  SessionObject.h  TokenDB.cpp  TokenDB.h
src/lib/object_store/spec/: DBObjectSpec.cpp  DBTokenSpec.cpp  Makefile.am  OSTokenSpec.cpp  ObjectFileSpec.cpp  ObjectStoreSpec.cpp  TokenDBSpec.cpp  objstorespec.cpp
src/lib/object_store/spec/igloo/core/: testrunner.h
src/lib/object_store/spec/igloo/core/outputters/: outputters.h  qtcreatoroutput.h
src/lib/object_store/test/: OSTokenTests.cpp  ObjectFileTests.cpp  ObjectStoreTests.cpp
src/lib/slot_mgr/: Token.cpp
src/lib/slot_mgr/test/: SlotManagerTests.cpp
